<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="153dp"
        android:layout_width="272dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="272dp"
            android:layout_height="51dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/key01"
                android:layout_width="68dp"
                android:layout_height="51dp"
                android:text="@string/key01"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:background="@drawable/sel_number_key"/>
            <Button
                android:id="@+id/key02"
                android:layout_width="68dp"
                android:layout_height="51dp"
                android:text="@string/key02"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:background="@drawable/sel_number_key"/>
            <Button
                android:id="@+id/key03"
                android:layout_width="68dp"
                android:layout_height="51dp"
                android:text="@string/key03"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:background="@drawable/sel_number_key"/>
            <Button
                android:id="@+id/key04"
                android:layout_width="68dp"
                android:layout_height="51dp"
                android:text="@string/key04"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:background="@drawable/sel_number_key"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="272dp"
            android:layout_height="51dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/key05"
                android:layout_width="68dp"
                android:layout_height="51dp"
                android:text="@string/key05"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:background="@drawable/sel_number_key"/>
            <Button
                android:id="@+id/key06"
                android:layout_width="68dp"
                android:layout_height="51dp"
                android:text="@string/key06"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:background="@drawable/sel_number_key"/>
            <Button
                android:id="@+id/key07"
                android:layout_width="68dp"
                android:layout_height="51dp"
                android:text="@string/key07"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:background="@drawable/sel_number_key"/>
            <Button
                android:id="@+id/key08"
                android:layout_width="68dp"
                android:layout_height="51dp"
                android:text="@string/key08"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:background="@drawable/sel_number_key"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="272dp"
            android:layout_height="51dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/key09"
                android:layout_width="68dp"
                android:layout_height="51dp"
                android:text="@string/key09"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:background="@drawable/sel_number_key"/>
            <Button
                android:id="@+id/key10"
                android:layout_width="68dp"
                android:layout_height="51dp"
                android:text="@string/key10"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:background="@drawable/sel_number_key"/>
            <Button
                android:id="@+id/key11"
                android:layout_width="68dp"
                android:layout_height="51dp"
                android:text="@string/key11"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:background="@drawable/sel_number_key"/>

            <RelativeLayout
                android:layout_width="68dp"
                android:layout_height="51dp">
                <ImageView
                    android:id="@+id/key12"
                    android:layout_width="68dp"
                    android:layout_height="51dp"
                    android:text="@string/key11"
                    android:textSize="16dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/sel_number_key"/>

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:adjustViewBounds="true"
                    android:layout_centerInParent="true"
                    android:background="@drawable/keyboard_icon_del"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>