<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f6ff"
    android:gravity="center">

    <LinearLayout
        android:layout_width="545dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--메뉴-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/select_route_menu01"
                android:layout_width="135.5dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/select_route_menu01"
                android:textColor="#ffffff"
                android:background="@drawable/sel_select_meu_route"/>
            <View
                android:layout_width="1dp"
                android:layout_height="45dp"/>
            <Button
                android:id="@+id/select_route_menu02"
                android:layout_width="135.5dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/select_route_menu02"
                android:textColor="#ffffff"
                android:background="@drawable/sel_select_meu_route"/>
            <View
                android:layout_width="1dp"
                android:layout_height="45dp"/>
            <Button
                android:id="@+id/select_route_menu03"
                android:layout_width="135.5dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/select_route_menu03"
                android:textColor="#ffffff"
                android:background="@drawable/sel_select_meu_route"/>
            <View
                android:layout_width="1dp"
                android:layout_height="45dp"/>
            <Button
                android:id="@+id/select_route_menu04"
                android:layout_width="135.5dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/select_route_menu04"
                android:textColor="#ffffff"
                android:background="@drawable/sel_select_meu_route"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">
            <!--노선번호-->
            <LinearLayout
                android:layout_width="238dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/busNumber"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:hint="@string/login_form01"
                    android:textColorHint="#555555"
                    android:background="@drawable/bg_form"/>
                <Button
                    android:id="@+id/testButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="선택"/>
            </LinearLayout>

            <!--번호키-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/number_keyboard"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>