<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f6ff"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="265dp"
                android:layout_height="145dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/emergencyMenuImg01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/sel_emergency_top_btn"/>
                <ImageView
                    android:id="@+id/emergencyMenuIcon01"
                    android:layout_width="78dp"
                    android:layout_height="83dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="9dp"
                    android:src="@drawable/menu_accident_icon01"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emergencyMenuIcon01"
                    android:gravity="center"
                    android:text="@string/select_emergency_menu01"
                    android:textColor="#ffffff"
                    android:textSize="24dp"/>
            </RelativeLayout>
            <View
                android:layout_width="15dp"
                android:layout_height="10dp"/>

            <RelativeLayout
                android:layout_width="265dp"
                android:layout_height="145dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/emergencyMenuImg02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/sel_emergency_top_btn"/>
                <ImageView
                    android:id="@+id/emergencyMenuIcon02"
                    android:layout_width="78dp"
                    android:layout_height="83dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="9dp"
                    android:src="@drawable/menu_accident_icon02"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emergencyMenuIcon02"
                    android:gravity="center"
                    android:text="@string/select_emergency_menu02"
                    android:textColor="#ffffff"
                    android:textSize="24dp"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="175dp"
                android:layout_height="59dp"
                android:text="@string/select_emergency_menu03"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:background="@drawable/sel_select_meu_mode"/>
            <View
                android:layout_width="11dp"
                android:layout_height="match_parent"/>
            <Button
                android:layout_width="175dp"
                android:layout_height="59dp"
                android:textColor="#ffffff"
                android:text="@string/select_emergency_menu04"
                android:textSize="20dp"
                android:background="@drawable/sel_select_meu_mode"/>
            <View
                android:layout_width="11dp"
                android:layout_height="match_parent"/>
            <Button
                android:layout_width="175dp"
                android:layout_height="59dp"
                android:text="@string/select_emergency_menu05"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:background="@drawable/sel_select_meu_mode"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>